@@ -11,6 +11,9 @@
    - djm@cvs.openbsd.org 2004/06/24 19:32:00
      [regress/Makefile regress/test-exec.sh, added regress/reexec.sh]
      regress test for re-exec corner cases
+   - djm@cvs.openbsd.org 2004/06/25 01:25:12
+     [regress/test-exec.sh]
+     clean reexec-specific junk out of text-exec.sh and simplify; idea markus@
 
 20040623
  - (dtucker) [auth1.c] Ensure do_pam_account is called for Protocol 1
@@ -1413,4 +1416,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3446 2004/06/25 03:45:18 dtucker Exp $
+$Id: ChangeLog,v 1.3447 2004/06/25 03:46:08 dtucker Exp $
